Fixed overflow error

--- a/internProject/website/static/css/account.css
+++ b/internProject/website/static/css/account.css
@@ -231,7 +231,6 @@ nav {
 .container {
   width: 80%;
   margin: auto;
-  overflow: hidden;
   padding: 20px;
   background: #fff;
   border-radius: 8px;
